--- a/src/dantto4k_dll.vcxproj
+++ b/src/dantto4k_dll.vcxproj
@@ -162,6 +162,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="accessControlDescriptor.cpp" />
+    <ClCompile Include="applicationMfuDataProcessor.cpp" />
+    <ClCompile Include="aribUtil.cpp" />
     <ClCompile Include="audioMfuDataProcessor.cpp" />
     <ClCompile Include="acascard.cpp" />
     <ClCompile Include="adtsConverter.cpp" />
@@ -180,6 +182,7 @@
     <ClCompile Include="multimediaServiceInformationDescriptor.cpp" />
     <ClCompile Include="relatedBroadcasterDescriptor.cpp" />
     <ClCompile Include="systemManagementDescriptor.cpp" />
+    <ClCompile Include="timeUtil.cpp" />
     <ClCompile Include="tlvDescriptorFactory.cpp" />
     <ClCompile Include="tlvTableFactory.cpp" />
     <ClCompile Include="videoMfuDataProcessor.cpp" />
@@ -233,6 +236,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="accessControlDescriptor.h" />
+    <ClInclude Include="applicationMfuDataProcessor.h" />
+    <ClInclude Include="aribUtil.h" />
     <ClInclude Include="audioMfuDataProcessor.h" />
     <ClInclude Include="acascard.h" />
     <ClInclude Include="adtsConverter.h" />
@@ -242,6 +247,7 @@
     <ClInclude Include="contentCopyControlDescriptor.h" />
     <ClInclude Include="dantto4k.h" />
     <ClInclude Include="dataUnit.h" />
+    <ClInclude Include="descriptorConverter.h" />
     <ClInclude Include="ecm.h" />
     <ClInclude Include="eventPackageDescriptor.h" />
     <ClInclude Include="extensionHeaderScrambling.h" />
@@ -254,6 +260,7 @@
     <ClInclude Include="multimediaServiceInformationDescriptor.h" />
     <ClInclude Include="relatedBroadcasterDescriptor.h" />
     <ClInclude Include="systemManagementDescriptor.h" />
+    <ClInclude Include="timeUtil.h" />
     <ClInclude Include="tlvDescriptorFactory.h" />
     <ClInclude Include="tlvTableFactory.h" />
     <ClInclude Include="videoMfuDataProcessor.h" />
