Fix issue with freezing when using BonDriver_Proxy.dll

--- a/ini/BonDriver_dantto4k.ini
+++ b/ini/BonDriver_dantto4k.ini
@@ -3,3 +3,6 @@ bondriverPath=BonDriver_BDA.dll
 
 ; mmtsDumpPath specifies the path to dump the MMTS for debugging (optional)
 mmtsDumpPath=
+
+[audio]
+disableADTSConversion=false
