Fix issue with PTS/DTS calculation

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,3 +1,9 @@
 x64
 dantto4k.vcxproj.user
 dantto4k_dll.vcxproj.user
+dantto4k_dev.vcxproj
+dantto4k_dll_dev.vcxproj
+dantto4k_dev.vcxproj.user
+dantto4k_dll_dev.vcxproj.user
+dantto4k_dev.vcxproj.filters
+dantto4k_dll_dev.vcxproj.filters
