Implement smartcard reader selection functionality

--- a/ini/BonDriver_dantto4k.ini
+++ b/ini/BonDriver_dantto4k.ini
@@ -4,5 +4,8 @@ bondriverPath=BonDriver_BDA.dll
 ; mmtsDumpPath specifies the path to dump the MMTS for debugging (optional)
 mmtsDumpPath=
 
+[acas]
+smartCardReaderName=
+
 [audio]
 disableADTSConversion=false
