--- a/src/dantto4k_dll.vcxproj
+++ b/src/dantto4k_dll.vcxproj
@@ -167,6 +167,8 @@
     <ClCompile Include="audioMfuDataProcessor.cpp" />
     <ClCompile Include="acascard.cpp" />
     <ClCompile Include="adtsConverter.cpp" />
+    <ClCompile Include="b24Color.cpp" />
+    <ClCompile Include="b24SubtitleConvertor.cpp" />
     <ClCompile Include="bonTuner.cpp" />
     <ClCompile Include="caMessage.cpp" />
     <ClCompile Include="compressedIPPacket.cpp" />
@@ -187,6 +189,7 @@
     <ClCompile Include="multimediaServiceInformationDescriptor.cpp" />
     <ClCompile Include="ntp.cpp" />
     <ClCompile Include="pesPacket.cpp" />
+    <ClCompile Include="pugixml.cpp" />
     <ClCompile Include="relatedBroadcasterDescriptor.cpp" />
     <ClCompile Include="systemManagementDescriptor.cpp" />
     <ClCompile Include="timebase.cpp" />
@@ -196,6 +199,7 @@
     <ClCompile Include="tsARIBCharset.cpp" />
     <ClCompile Include="tsARIBCharsetData.cpp" />
     <ClCompile Include="tsARIBCharsetEncoding.cpp" />
+    <ClCompile Include="ttml.cpp" />
     <ClCompile Include="videoMfuDataProcessor.cpp" />
     <ClCompile Include="m2SectionMessage.cpp" />
     <ClCompile Include="m2ShortSectionMessage.cpp" />
@@ -251,6 +255,9 @@
     <ClInclude Include="audioMfuDataProcessor.h" />
     <ClInclude Include="acascard.h" />
     <ClInclude Include="adtsConverter.h" />
+    <ClInclude Include="b24Color.h" />
+    <ClInclude Include="b24ControlSet.h" />
+    <ClInclude Include="b24SubtitleConvertor.h" />
     <ClInclude Include="bonTuner.h" />
     <ClInclude Include="caMessage.h" />
     <ClInclude Include="compressedIPPacket.h" />
@@ -278,6 +285,8 @@
     <ClInclude Include="multimediaServiceInformationDescriptor.h" />
     <ClInclude Include="ntp.h" />
     <ClInclude Include="pesPacket.h" />
+    <ClInclude Include="pugiconfig.hpp" />
+    <ClInclude Include="pugixml.hpp" />
     <ClInclude Include="relatedBroadcasterDescriptor.h" />
     <ClInclude Include="systemManagementDescriptor.h" />
     <ClInclude Include="timebase.h" />
@@ -285,6 +294,7 @@
     <ClInclude Include="tlvDescriptorFactory.h" />
     <ClInclude Include="tlvTableFactory.h" />
     <ClInclude Include="tsARIBCharset.h" />
+    <ClInclude Include="ttml.h" />
     <ClInclude Include="videoMfuDataProcessor.h" />
     <ClInclude Include="IBonDriver.h" />
     <ClInclude Include="ip.h" />
