--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y make g++ libssl-dev libedit-dev zlib1g-dev libusb-1.0-0-dev libpcsclite-dev
+        sudo apt install make g++ libssl-dev libpcsclite-dev pscsd pkgconf
     - name: Install tsduck
       run: |
         git clone https://github.com/tsduck/tsduck.git
