--- a/src/dantto4k.vcxproj
+++ b/src/dantto4k.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="dataTransmissionMessage.cpp" />
     <ClCompile Include="dataUnit.cpp" />
     <ClCompile Include="ecm.cpp" />
+    <ClCompile Include="ecmProcessor.cpp" />
     <ClCompile Include="eventPackageDescriptor.cpp" />
     <ClCompile Include="extensionHeaderScrambling.cpp" />
     <ClCompile Include="ipv6.cpp" />
@@ -255,6 +256,7 @@
     <ClInclude Include="dataUnit.h" />
     <ClInclude Include="descriptorConverter.h" />
     <ClInclude Include="ecm.h" />
+    <ClInclude Include="ecmProcessor.h" />
     <ClInclude Include="eventPackageDescriptor.h" />
     <ClInclude Include="extensionHeaderScrambling.h" />
     <ClInclude Include="demuxerHandler.h" />
